commit with changes to text

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                                 RWH Filter</h3>
 
                             <p class="mbr-white align-center mbr-fonts-style display-4">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                Only filter whose efficiency improves with the increase in rainfall. Works on principles of cohesion and centrifugal force
+Research backed by high technical knowledge (including world class research facility)</p>
                         </div>
                     </figcaption>
                 </div>
@@ -122,7 +123,9 @@
                             
                             <h3 class="pb-2 mbr-white mbr-semibold align-center mbr-fonts-style display-1">GroundWater Recharging</h3>
                             <p class="mbr-white align-center mbr-fonts-style display-4">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Specialized V-Wire Screens for filtration.
+Works on Gravitational Force and does not require any external energy.
+Assured life span of a minimum of 20 years.
                             </p>
                         </div>
                     </figcaption>
